<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cook Book</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_about">About</string>
    <string name="button_usa">USA</string>
    <string name="button_italian">Italian</string>
    <string name="button_indian">Indian</string>
    <string name="app_logo">App logo</string>
    <string name="title_activity_category_select">Cook Book</string>
    <string name="description_country_flag">Country flag</string>
    <string name="button_main_dishes_select">Main dishes</string>
    <string name="button_appetizers_select">Appetizers</string>
    <string name="button_desserts_select">Desserts</string>
    <string name="button_soups_select">Soups</string>
    <string name="button_salads_select">Salads</string>
    <string name="button_drinks_select">Drinks</string>
    <string name="title_activity_recipe_list">Cook Book</string>

</resources>
